# TrainGame

./: CMakeLists.txt  DOCUMENTATION.md  README.md  World Gen Algorithm Ideas  main.cpp  mapgen.cpp  mapgen.h
Shaders/: fragmentShaderSource.frag  vertexShaderSource.vert
class_headers/: object.h  terrain.h
classes/: OpenSimplexNoise.cpp  camera.cpp  camera.h  files.cpp  files.h  map.cpp  map.h  object.cpp  object.h  objects.cpp  objects.h  shading.cpp  shading.h  stringFuncs.h  terrain.cpp  terrain.h
